Button: fixed stretching for case with only one button in block

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -40,6 +40,10 @@
   flex-grow: 1;
   }
 
+.Button--str:first-child:last-child {
+  width: 100%;
+  }
+
   .Button--stretched .Button__in {
     justify-content: center;
     }
